--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,12 +4,12 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
+  - name: 主页
     url: /
     weight: 10
-  - name: Documentation
+  - name: 文档
     url: docs/
     weight: 20
-  - name: Blog
+  - name: 博客
     url: http://www.niansong.top/
     weight: 30
