--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -15,11 +15,11 @@ appearance:
 
 marketing:
   seo:
-    site_type: Project
+    site_type: nmid
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo documentation theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    description: 'nmid golang rpc framework'
+    twitter: 'hughnian'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
