--- a/userguide/hugo.yaml
+++ b/userguide/hugo.yaml
@@ -1,6 +1,6 @@
 baseURL: /
-title: &title Docsy
-description: &desc Docsy does docs
+title: &title nmid
+description: &desc nmid micro service & rpc framework
 enableRobotsTXT: true
 theme: [docsy]
 enableGitInfo: true
