--- a/userguide/hugo.yaml
+++ b/userguide/hugo.yaml
@@ -22,11 +22,16 @@ imaging:
 
 menu:
   main:
-    - name: Example Site
+    - name: 博客
       weight: 40
-      url: https://example.docsy.dev
+      url: http://www.niansong.top
       post: <sup><i class="ps-1 fa-solid fa-up-right-from-square fa-xs"
         aria-hidden="true"></i></sup>
+    # - name: Example Site
+    #   weight: 40
+    #   url: https://example.docsy.dev
+    #   post: <sup><i class="ps-1 fa-solid fa-up-right-from-square fa-xs"
+    #     aria-hidden="true"></i></sup>
 
 services:
   googleAnalytics:
